--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
@@ -8,16 +8,11 @@
 
 
 
-    <include layout="@layout/content_main_screen" />
-
-
-    <RelativeLayout
+    <ListView
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <View android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_centerInParent="true"
-        android:background="@drawable/circle"/>
-    </RelativeLayout>
+        android:id="@+id/main_list_view"
+        >
+        </ListView>
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
